--- a/templates/vm_info.j2
+++ b/templates/vm_info.j2
@@ -3,6 +3,12 @@
 # DO NOT EDIT
 #
 
+vm_recreate: {{ vgs_vm_recreate }}
+
+cloud_storage_path: /var/lib/libvirt/images/{{ vmg_vm_storage_pool_name }}
+cloud_network: {{ vmg_nw_name }}
+
+
 {% set cnt = namespace(value=vmg_vm_first_ip_octet) -%}
 cloud_vms_info:
 {% for vm_data in vmg_vms_infra | dict2items -%}
@@ -10,7 +16,7 @@ cloud_vms_info:
 {% if vm_data.value.count == 1 %}
   '{{ vm_data.key }}':
 {% else %}
-  '{{ vm_data.key }}{{ ctr+1}}':
+  '{{ vm_data.key }}{% if vm_data.value.alphabet == False %}{{ ctr+1}}{% else %}{{vmg_alphabets[ctr]}}{% endif %}':
 {% endif %}
     vm_image_link: {{ vmg_vm_image_link }}
 {% if vm_data.value.count == 1 %}
@@ -19,9 +25,9 @@ cloud_vms_info:
     vm_local_hostname: {{ vm_data.value.hostname_spec }}{% if vm_data.value.alphabet == False %}{{ ctr+1}}{% else %}{{vmg_alphabets[ctr]}}{% endif %}
 {%- endif %}
 {% if vm_data.value.count == 1 %} 
-    vm_local_fqdn: {{ vm_data.value.hostname_spec }}.{{ vmg_vm_domain }}
+    vm_fqdn: {{ vm_data.value.hostname_spec }}.{{ vmg_vm_domain }}
 {% else +%}
-    vm_local_fqdn: {{ vm_data.value.hostname_spec }}{% if vm_data.value.alphabet == False %}{{ ctr+1}}{% else %}{{vmg_alphabets[ctr]}}{% endif %}.{{ vmg_vm_domain }}
+    vm_fqdn: {{ vm_data.value.hostname_spec }}{% if vm_data.value.alphabet == False %}{{ ctr+1}}{% else %}{{vmg_alphabets[ctr]}}{% endif %}.{{ vmg_vm_domain }}
 {% endif %}
     vm_root_passwd: {{ vmg_vm_root_passwd }}
     vm_os_type: linux
