Fixed typo in vm_info.j2

--- a/templates/vm_info.j2
+++ b/templates/vm_info.j2
@@ -3,7 +3,7 @@
 # DO NOT EDIT
 #
 
-vm_recreate: {{ vgs_vm_recreate }}
+vm_recreate: {{ vmg_vm_recreate }}
 
 cloud_storage_path: /var/lib/libvirt/images/{{ vmg_vm_storage_pool_name }}
 cloud_network: {{ vmg_nw_name }}
